--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .app-container {
   display: flex;
+  height: 100%;
 }
 
 .pencil {
@@ -11,13 +12,13 @@
 }
 
 .tools {
+  width: 10%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   background: #03002e;
-  width: 10vw;
-  height: 100vh;
   color: white;
-  font-size: 20px;
+  font-size: 1.25rem;
   word-wrap: break-word;
   padding: 0 10px;
   justify-content: center;
@@ -39,12 +40,12 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  font-size: 30px;
+  font-size: 1.875rem;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .stroke-width {
-  font-size: 20px;
+  font-size: 1.25rem;
   text-align-last: center;
   margin-bottom: 20px;
 }
@@ -52,6 +53,6 @@
 .eraser-button,
 .clear,
 .save {
-  font-size: 50px;
+  font-size: 3.125rem;
   margin: 10px 0;
 }
