--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+html,
+body {
+  font-size: 10px;
+  height: 100%;
+  width: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -5,7 +12,13 @@ body {
   overflow: hidden;
 }
 
-html,
-body {
+#root {
   height: 100%;
+}
+
+@media screen and (orientation: landscape) {
+  html,
+  body {
+    font-size: 16px;
+  }
 }
